# dpf-core

./: .gitignore  CMakeLists.txt  README.md
dpf-core/: CMakeLists.txt  core.cpp  core.h  plugin_interface.cpp  plugin_interface.h
examples/: CMakeLists.txt
examples/create_and_load_plugin/: CMakeLists.txt  create.cpp  interface.h  load.cpp
